finished and resolve one api working code
